--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0"
+    },
+    "dependencies": {
+        "reactstrap": "^8.9.0"
     }
 }
