--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=f36166b96926be062e71",
-    "/css/app.css": "/css/app.css?id=50e6aa070a5d4536d768"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
