--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.14.5",
         "axios": "^0.21",
-        "bootstrap": "^5.0.2",
+        "bootstrap": "^4.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "react": "^17.0.2",
@@ -24,6 +24,8 @@
         "sass-loader": "^12.1.0"
     },
     "dependencies": {
+        "boostrap": "^2.0.0",
+        "react-router-dom": "^5.2.0",
         "reactstrap": "^8.9.0"
     }
 }
