--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
         "react-bootstrap": "^1.6.1",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.4",
+        "react-router-dom": "^5.2.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0"
     },
     "dependencies": {
         "boostrap": "^2.0.0",
-        "react-router-dom": "^5.2.0",
-        "reactstrap": "^8.9.0"
+        "react-elastic-carousel": "^0.11.5",
+        "reactstrap": "^8.9.0",
+        "styled-components": "^5.3.0"
     }
 }
