--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "boostrap": "^2.0.0",
         "react-elastic-carousel": "^0.11.5",
+        "react-hook-form": "^7.11.1",
         "reactstrap": "^8.9.0",
         "styled-components": "^5.3.0"
     }
