--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
         "boostrap": "^2.0.0",
         "react-elastic-carousel": "^0.11.5",
         "react-hook-form": "^7.11.1",
+        "react-query": "^3.19.0",
+        "react-toastify": "^7.0.4",
         "reactstrap": "^8.9.0",
-        "styled-components": "^5.3.0"
+        "styled-components": "^5.3.0",
+        "sweetalert": "^2.1.2"
     }
 }
